--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <body>
 <div id="app"></div>
-<script type="module" src="/site/target/scala-2.13/site-fastopt/main.js" ></script>
+<script type="module" src="/target/scala-2.13/me-fastopt/main.js" ></script>
 </body>
 </html>
